css/style.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");

:root {
  --primary-color: #e50914;
  --dark-color: #141414;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Arial", sans-serif;
  background: #000;
  color: #999;
}

a {
  text-decoration: none;
  color: #fff;
}

ul {
  list-style: none;
}

img {
  display: block;
  width: 100%;
}

/* Showcase */
.logo {
  height: 24px;
  width: 100px;
}
.showcase {
  height: 100vh;
  width: 100%;
  background: url(../img/background.jpg) no-repeat center center/cover;
  background-color: rgb(48, 48, 48);
  background-blend-mode: overlay;
}
.showcase-top {
  flex-direction: row;
  justify-content: space-between;
}
.showcase-content {
  color: #fff;
  height: 100vh;
  max-width: 640px;
  margin: 0 auto;
}

.showcase .card-title {
  font-size: 1.75rem;
}

.showcase .card-subtitle {
  font-size: 1.625rem;
  margin: 1.5rem 0;
  font-weight: 300;
}

.showcase .form-title,
.questions .form-title {
  margin-bottom: 1rem;
  font-weight: 300;
}

.email-form input {
  border: 0;
  margin-bottom: 2rem;
}

.email-form input:focus,
.email-form button:focus {
  outline: 0;
}
.email-form input,
.email-form button {
  /* padding: 1.2rem 2rem; */
  padding: 0.8rem 1.5rem;
  letter-spacing: 2px;
  border-radius: 1px;
  font-size: 1.2rem;
}

.email-form button {
  display: inline-block;
  background: var(--primary-color);
  color: #fff;
  font-weight: bold;
  border: 0;
  cursor: pointer;
  position: relative;
  width: 200px;
}

.email-form button::after {
  content: "";
  position: absolute;
  background: url(../img/right-chevron.svg);
  background-size: 1.5rem 1.5rem;
  height: 24px;
  width: 24px;
  margin-left: 0.3rem;
}

/* Tab Content */
.tabs {
  border-bottom: 3px solid #3d3d3d;
  background: var(--dark-color);
  padding-top: 2rem;
}

.tabs .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.tabs .icon {
  width: 3rem;
  margin: 1rem 0;
}

.tabs p {
  font-size: 1.2rem;
  padding-bottom: 0.5rem;
}

.tabs .container > div {
  transition: transform, color, 0.2s ease;
}
.tabs .container > div:hover {
  transform: translateY(-1%) scale(0.99);
  color: #fff;
  cursor: pointer;
}

.tab-border {
  border-bottom: 4px solid var(--primary-color);
}

/* Hide content initially */
#tab-1-content,
#tab-2-content,
#tab-3-content {
  display: none;
}

#tab-1-content.show,
#tab-2-content.show,
#tab-3-content.show {
  display: block;
}

.tab-1-content-inner img {
  width: 300px;
  margin: 0 auto;
}

.tabs .container,
.tab-content .container {
  max-width: 70%;
  margin: 0 auto;
  overflow: hidden;
}

.tab-2-content-bottom h3 {
  text-align: center;
  color: #fff;
  margin-bottom: 1rem;
  font-weight: 100;
}

.tab-2-content-bottom p {
  text-align: center;
}

.tab-3-table img {
  width: 1.5rem;
}
.tab-2-content-1,
.tab-2-content-2,
.tab-2-content-3 {
  margin-bottom: 1rem;
}

/* Responsive Table */
.table {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 400px;
  margin: 0 auto;
}
.table .row img {
  width: 1rem;
  margin: 0 auto;
}

.table .row:first-of-type li {
  text-align: center;
  color: #fff;
  text-transform: uppercase;
  padding: 0.8rem;
  font-size: 0.7rem;
  font-weight: 700;
}
.table .row {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  flex: 2;
  color: #fff;
  font-size: 0.8rem;
}

.table .row li {
  flex: 1;
  padding: 10px;
  text-align: center;
  width: 260px;
}

.table .row:nth-child(even) {
  background: linear-gradient(45deg, #333, #222);
}
.table .row .legend {
  width: 260px;
  text-align: left;
  /* background: linear-gradient(to left, rgb(131, 2, 2), var(--primary-color)); */
}

/* Slideshow */
.slideshow {
  border-top: 6px solid #3d3d3d;
  color: #fff;
}

.tv {
  position: relative;
  max-width: 550px;
}

.video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: -1;
}

.apple-tv {
  position: relative;
  max-width: 600px;
  overflow: hidden;
}

.apple-tv .video {
  position: absolute;
  top: 10%;
  left: 19%;
  width: 61%;

  z-index: -1;
}

/* Questions Sections */

.questions {
  color: #fff;
  border-top: 6px solid #3d3d3d;
}
.questions .collapsible {
  max-width: 800px;
  margin: 0 auto;
  margin-bottom: 1rem;
  background: #303030;
  padding: 1rem;
}

.collapsible .collapsible-header {
  flex-direction: row;
  justify-content: space-between;
}

.collapsible-header h2 {
  font-size: 1.1rem;
  font-weight: 400;
}

.collapsible-content {
  max-height: 0;
  opacity: 0;
  transition: all 0.4s ease;
}
.collapsible-content.show {
  max-height: 100vh;
  opacity: 1;
}
.collapsible .collapsible-content p {
  padding: 1rem 0;
  font-size: 1rem;
}
.questions .icon {
  width: 1rem;
  transform: rotate(-45deg);
  transition: transform 0.4s ease;
  cursor: pointer;
}

.questions .icon.rotate {
  transform: rotate(90deg);
}

/* Footer */
.main-footer {
  border-top: 6px solid #3d3d3d;
}

.main-footer p {
  max-width: 1000px;
  margin: 0 auto;
  padding-left: 2rem;
}
.main-footer .container {
  grid-template-columns: repeat(2, 1fr);
}
.main-footer a {
  color: #999;
  font-size: 0.8rem;
}

/* ############# */
/* MEDIA QUERIES */
/* ############## */
@media (min-width: 768px) {
  .hide-sm {
    display: initial;
  }
  .logo {
    height: 32px;
    width: 108px;
  }

  .card-title {
    font-size: 3.125rem;
  }

  .card-subtitle {
    font-size: 1.625rem;
  }
  .email-form {
    flex-direction: row;
  }

  .email-form input {
    margin-bottom: 0;
    min-width: 450px;
  }
  .email-form input,
  .email-form button {
    padding: 1.2rem 1.5rem;
  }
  .email-form button {
    display: inline-block;
  }

  .tabs .container,
  .tab-content .container {
    max-width: 100%;
    margin: 0 auto;
  }
  .tab-1-content-inner img {
    width: 100%;
    margin: 0 auto;
  }

  .tab-1-content-inner {
    grid-template-columns: repeat(2, 1fr);
  }

  .tab-1-content-inner > div {
    width: 450px;
    text-align: left;
  }
  .tab-2-content-top {
    gap: 1rem;
    text-align: left;
    grid-template-columns: repeat(3, 1fr);
  }

  .tab-2-content-top a {
    margin-left: auto;
  }

  .tab-2-content-top .text-lg {
    grid-column: 1/3;
  }

  .tab-2-content-bottom {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: flex-start;
  }

  /* responsive table */
  .table {
    align-items: center;
    max-width: 1200px;
    padding: 0 1rem;
  }

  .table .row {
    font-size: 1rem;
  }

  .table .row img {
    width: 1.5rem;
    margin: 0 auto;
  }

  .table .row .legend {
    width: 600px;
    text-align: left;
  }

  .table .row:first-of-type li {
    font-size: 1rem;
  }
  /* Cards */

  .slideshow .grid {
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem;
  }
  .slideshow .card-title {
    font-size: 3.125rem;
    text-align: left;
  }

  .slideshow .card-subtitle {
    font-size: 1.625rem;
    text-align: left;
  }

  /* Collapsible */
  .questions .collapsible {
    padding: 1.5rem;
  }

  .questions .icon {
    width: 1.5rem;
  }
  .collapsible-header h2 {
    font-size: 1.8rem;
    font-weight: 400;
  }
  /* Footer */
  .main-footer .container {
    max-width: 1000px;
    grid-template-columns: repeat(4, 1fr);
    align-items: flex-start;
    justify-content: center;
  }

  .main-footer li {
    margin-bottom: 0.6rem;
    white-space: nowrap;
  }

  .main-footer a:hover {
    text-decoration: underline;
  }
}

@media (min-width: 1024px) {
  .logo {
    height: 36px;
    width: 134px;
  }

  .email-form input,
  .email-form button {
    font-size: 1.2rem;
  }
  .text-xl {
    font-size: 2rem;
  }
  .text-lg {
    font-size: 1.8rem;
  }

  .tabs .container,
  .tab-content .container {
    max-width: 70%;
    margin: 0 auto;
    overflow: hidden;
  }
  .tabs .icon {
    width: 4rem;
  }

  .tab-2-content-bottom {
    grid-template-columns: repeat(3, 1fr);
  }

  .table {
    max-width: 1400px;
  }
  .table .row .legend {
    min-width: 300px;
    white-space: nowrap;
  }
}

/* LARGER SCREEN */
@media (min-width: 1440px) {
  .tabs .container,
  .tab-content .container {
    max-width: 80%;
    margin: 0 auto;
  }

  .tab-1-content-inner > div {
    width: 550px;
    text-align: left;
  }

  .tab-1-content img,
  .tab-2-content img {
    width: 100%;
    margin: 0 auto;
  }
}

